--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="shortcut icon" href="loja.png" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula 02 WebDesign</title>
+    <title>Loja Camisa de Times</title>
     <meta name="description" content="Segundo código da aula de WebDesign"
     <meta name="author" content="Matheus Guimarães">
     <link href="Estilo.css" rel="stylesheet"
@@ -35,7 +35,7 @@
   </div> 
   <header class="headermeio">
     <center>
-<h1> <B>Repositório de Imagens</B></h1>
+<h1> <B>Camisas</B></h1>
 </center> 
 </header>
 <br>
