--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
  
  <section>
     <center>
-  <h2> Trabalhos Realizados</h2>
+  <h2> Camisas</h2>
   <hr>
   <div>
 <a href="https://shopee.com.br/Camiseta-de-time-Futebol-Clube-do-Porto-camiseta-de-futebol-22-23-Tailandesa-1-1-i.610953695.23097021014">
@@ -56,7 +56,7 @@
 </center>
 <header class="headerult">
     <center>
-<h3> <B>Repositório de Vídeos</B></h3>
+<h3> <B>Vídeos</B></h3>
 <section>
     <h4> Video sobre as camisas </h4>
     <div>
